namespace CipherBank_app.ViewModels;

public class MainPageViewModel
{
    
}